--- a/index.html
+++ b/index.html
@@ -390,7 +390,173 @@
     </div>
   </div>
 </section>
-
+<section class="road-container">
+  <div class="road-obj">
+    <img src="./assets/road-obj.png" alt="">
+  </div>
+  <div class="road-sect section">
+    <h3 class="road-h">RoadMap</h3>
+    <div class="road-top">
+      <div class="road-top-title">
+        <div class="road-card-h road-h-lg">
+          <span class="road-phase-bullet"><span></span></span>
+          <p>Phase 1</p>
+        </div>
+        <div class="road-card-h road-h-lg">
+          <span class="road-phase-bullet"><span></span></span>
+          <p>Phase 2</p>
+        </div>
+        <div class="road-card-h road-h-lg">
+          <p>Phase 3</p>
+        </div>
+      </div>
+      <div class="road-top-hr">
+        <div class="road-top-line"></div>
+        <div class="road-top-span">
+          <div>
+            <span class="road-hr-b1">
+              <span class="road-hr-b2">
+                <span class="road-hr-b3"></span>
+              </span>
+            </span>
+          </div>
+          <div>
+            <span class="road-hr-b1">
+              <span class="road-hr-b2">
+                <span class="road-hr-b3"></span>
+              </span>
+            </span>
+          </div>
+          <div>
+            <span class="road-hr-b2">
+              <span class="road-hr-b3"></span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="road-cards">
+      <div class="road-card">
+        <div class="road-card-h road-h-sm">
+          <span class="road-phase-bullet"><span></span></span>
+          <p>Phase 1</p>
+        </div>
+        <div class="road-content">
+          <div class="road-cont-bg">
+            <img src="./assets/token-colored-bg.png" alt="">
+          </div>
+          <div class="road-cont-h ">
+            <h3>2025</h3>
+          <div class="road-card-logo">
+            <img src="./assets/token-card-logo.png" alt="">
+          </div>
+          </div>
+          <ul>
+            <li>Issuing SECURIST (SECU)</li>
+            <li>TOKEN homepage and SNS publication</li>
+            <li>Activate and market your TOKEN community</li>
+            <li>Completed development and launched SECURIST information security platform</li>
+          </ul>
+        </div>
+      </div>
+      <div class="road-card">
+        <div class="road-card-h road-h-sm">
+          <span class="road-phase-bullet"><span></span></span>
+          <p>Phase 2</p>
+        </div>
+        <div class="road-content">
+          <div class="road-cont-bg">
+            <img src="./assets/token-colored-bg.png" alt="">
+          </div>
+          <div class="road-cont-h">
+            <h3>2026</h3>
+          <div class="road-card-logo">
+            <img src="./assets/token-card-logo.png" alt="">
+          </div>
+          </div>
+          <ul>
+            <li>SECURIST Artificial Intelligence Introduces AI engine and develops deep learning</li>
+            <li>SECURIST WEB3 Wallet</li>
+            <li>Developing SECURIST (SECU) TOKEN payments and available marketplace services</li>
+          </ul>
+        </div>
+      </div>
+      <div class="road-card">
+        <div class="road-card-h road-h-sm">
+          <p>Phase 3</p>
+        </div>
+        <div class="road-content">
+          <div class="road-cont-bg">
+            <img src="./assets/limit-card-bg.png" alt="">
+          </div>
+          <div class="road-cont-h">
+            <h3>2027</h3>
+          <div class="road-card-logo">
+            <img src="./assets/token-card-logo.png" alt="">
+          </div>
+          </div>
+          <ul>
+            <li>SECURIST AI AI deep learning advancement and service application</li>
+            <li>Apply SECURIST WEB3 Wallet Service</li>
+            <li>Launch of SECURIST (SECU) token payments and available marketplace services.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="team-container">
+  <div class="team-sect section">
+    <h3 class="team-h">
+      Team & Partners
+    </h3>
+   <div class="team-content">
+    <div class="team-logo-container">
+      <div class="team-logo-bg">
+        <img src="./assets/teams-bg.png" alt="">
+      </div>
+      <div class="team-p-bg">
+        <img src="./assets/team-p-bg.png" alt="">
+      </div>
+      <div class="team-logo-h">
+        <p>Our Digital Partners</p>
+        <p>Blockchain Standards</p>
+       
+      </div>
+      <div class="team-logos">
+        <div class="team-logo">
+          <img src="./assets/team-logo1.png" alt="">
+        </div>
+        <div class="team-logo">
+          <img src="./assets/team-logo2.png" alt="">
+        </div>
+        <div class="team-logo">
+          <img src="./assets/team-logo3.png" alt="">
+        </div>
+        <div class="team-logo">
+          <img src="./assets/team-logo4.png" alt="">
+        </div>
+        <div class="team-logo">
+          <img src="./assets/team-logo5.png" alt="">
+        </div>
+        <div class="team-logo">
+          <img src="./assets/team-logo6.png" alt="">
+        </div>
+        
+      </div>
+    </div>
+    <div class="team-about">
+      <div class="cust-sub">
+        <div class="cust-sub-p">
+          <p>SECU Team</p>
+        </div>
+      </div>
+      <h4>Experienced Security & Blockchain Team</h4>
+      <p>SECURIST (SECU) TOKEN is issued by AEGISECU V Inc., an affiliate of AEGISECU, a leading security management consulting firm established in 2015. With expertise in ISMS certification and blockchain security, AEGISECU V Inc. combines regulatory compliance, cutting-edge cybersecurity, and blockchain technology to provide secure and efficient virtual asset services. By leveraging Solana’s high-speed, low-cost blockchain and advanced Web3 technologies, SECURIST aims to revolutionize information protection and digital asset security.</p>
+    </div>
+   </div>
+  </div>
+</section>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const navToggler = document.querySelector(".nav-toggler");
