--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </ul>
       </div>
       
-      <span class="nav-toggler">
+      <div class="nav-toggler">
         <i class="ri-menu-line"></i>
-      </span>
+      </div>
     </nav>
    <div class="hero-container section">
     <div class="hero-bg-obj">
@@ -506,6 +506,9 @@
   </div>
 </section>
 <section class="team-container">
+  <div class="team-obj">
+    <img src="./assets/team-obj.png" alt="">
+  </div>
   <div class="team-sect section">
     <h3 class="team-h">
       Team & Partners
@@ -557,6 +560,75 @@
    </div>
   </div>
 </section>
+<section class="disc-container">
+  <div class="section disc-sect">
+   <h3 class="disc-h"></h3>
+  </div>
+</section>
+<footer class="footer-container">
+  <div class="footer-obj1">
+    <img src="./assets/footer-obj1.png" alt="">
+  </div>
+  <div class="footer-obj2">
+    <img src="./assets/footer-obj2.png" alt="">
+  </div>
+  <div class="footer-obj3">
+    <img src="./assets/footer-obj3.png" alt="">
+  </div>
+  <div class="foot-sect section">
+    <div class="footer-content">
+      <div class="footer-bg">
+        <img src="./assets/limit-card-bg.png" alt="">
+      </div>
+      <div class="footer-grad">
+        <img src="./assets/footer-grad.png" alt="">
+      </div>
+      <div class="footer-top">
+        <div class="footer-logo">
+          <img src="./assets/Logo.png" alt="Logo">
+          <p>SECU</p>
+        </div>
+        <p>Securist is a of the Securist Platform inspired by the ATHENA software solution from Aegisecure.</p>
+        <div class="footer-social">
+          <a href="#">
+            <img src="./assets/facebook.png" alt="">
+          </a>
+          <a href="#">
+            <img src="./assets/twitter.png" alt="">
+          </a>
+          <a href="#">
+            <img src="./assets/instagram.png" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="footer-links">
+        <article class="footer-link">
+          <p>Navigation</p>
+          <a href="#">About Us</a>
+          <a href="#">Tokenomics</a>
+          <a href="#">Features</a>
+          <a href="#">Roadmap</a>
+        </article>
+        <article class="footer-link">
+          <p>Resources</p>
+          <a href="#">Home</a>
+          <a href="#">Get SECU</a>
+          <a href="#">Partners</a>
+      </article>
+      
+      <article class="footer-link">
+          <p>Contact Info</p>
+          <a href="https://maps.app.goo.gl/dfc2mQtDV7aE2YVs6" target="_blank">828 Timbercrest Road, Healy City, AK 97743</a>
+          <a href="tel:+0123456789">Telephone: + (012) 345 6789</a>
+          <a href="mailto:contact@cyfer.com">Email: contact@cyfer.com</a>
+      </article>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright ©2025 , Ltd. All right reserved</p>
+      </div>
+    </div>
+  </div>
+</footer>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const navToggler = document.querySelector(".nav-toggler");
@@ -573,6 +645,23 @@
         navList.classList.remove("nav-list-active");
       });
     });
+  </script>
+  <script>
+    function updateFooterImage() {
+  const footerImg = document.querySelector(".footer-bg img");
+  if (window.innerWidth > 990) {
+    footerImg.src = "./assets/footer-bg.png";
+  } else {
+    footerImg.src = "./assets/limit-card-bg.png";
+  }
+}
+
+// Run on load
+updateFooterImage();
+
+// Run on window resize
+window.addEventListener("resize", updateFooterImage);
+
   </script>
   
 </body>
