udpated footer links

--- a/index.html
+++ b/index.html
@@ -637,10 +637,10 @@ This inevitable demand for information protection as an ongoing business imperat
       <div class="footer-links">
         <article class="footer-link">
           <p>Navigation</p>
-          <a href="#">About Us</a>
-          <a href="#">Tokenomics</a>
+          <a href="#aboutSect">About Us</a>
+          <a href="#tokenSect">Tokenomics</a>
           <a href="#">Features</a>
-          <a href="#">Roadmap</a>
+          <a href="#roadmapSect">Roadmap</a>
         </article>
         <article class="footer-link">
           <p>Resources</p>
