--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="#tokenSect">Tokenomics <span></span></a></li>
           <li><a href="#roadmapSect">Roadmap <span></span></a></li>
           <li><a href="#teamSect">Team <span></span></a></li>
-          <li><a href="#" class="get-button"><img src="./assets/get-now-png.png" alt=""></a></li>
+          <li><a target="_blank" href="https://www.mexc.com/ko-KR/exchange/OLEA_USDT?_from=search" class="get-button"><img src="./assets/get-now-png.png" alt=""></a></li>
       </ul>
       </div>
       
@@ -217,7 +217,7 @@ This is largely due to the fact that cryptocurrency businesses have been rushed 
     </div>
   </div>
 </section>
-<section class="vision-container">
+<section id="visSect" class="vision-container">
   <div class="vis-obj1">
     <img src="./assets/vis-obj1.png" alt="">
   </div>
@@ -639,14 +639,14 @@ This inevitable demand for information protection as an ongoing business imperat
           <p>Navigation</p>
           <a href="#aboutSect">About Us</a>
           <a href="#tokenSect">Tokenomics</a>
-          <a href="#">Features</a>
+          <a href="#visSect">Features</a>
           <a href="#roadmapSect">Roadmap</a>
         </article>
         <article class="footer-link">
           <p>Resources</p>
-          <a href="#">Home</a>
-          <a href="#">Get SECU</a>
-          <a href="#">Partners</a>
+          <a href="./index.html">Home</a>
+          <a target="_blank" href="https://www.mexc.com/ko-KR/exchange/OLEA_USDT?_from=search">Get SECU</a>
+          <a href="#teamSect">Partners</a>
       </article>
       
       <article class="footer-link">
