--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ It’s a mission.</p>
    <div class="about-content">
      <div class="about-text">
       <h4>What is SPDG?</h4>
-      <p>No dev wallet. No VC. No rug. 1T supply — 95.7% already burned.</p>
+      <p>No dev wallet. No VC. No rug. <br> 1T supply — 95.7% already burned.</p>
       <p class="contract-p">Contract Address: <span>0xf46ccb9e08fb7e32eed560c87d5e583a59a43420</span></p>
       <h4>Key Stats</h4>
       <div class="key-stats">
@@ -114,7 +114,7 @@ It’s a mission.</p>
           <h4>Total</h4>
         </div>
         <div class="stat-div">
-          <div role="progressbar" aria-valuenow="95.7" data-value="97.5" aria-valuemin="0" aria-valuemax="100" style="--value: 95.7"></div>
+          <div role="progressbar" aria-valuenow="95.7" data-value="95.7" aria-valuemin="0" aria-valuemax="100" style="--value: 95.7"></div>
           <h4>Burned</h4>
         </div>
         <div class="stat-div">
