--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@ CMC/CG listing</p>
     <br><br>
     🕹 Full reveal coming soon.
   </p>
-  <div style="margin-top:40px;">
+  <!-- <div style="margin-top:40px;">
     <img src="https://via.placeholder.com/600x340.png?text=GameFi+Teaser+Coming+Soon" alt="GameFi Teaser" style="border-radius:12px; max-width:100%; box-shadow:0 0 15px rgba(0,255,255,0.3);">
-  </div>
+  </div> -->
 </section>
 <!-- footer -->
  <footer class="footer-container">
@@ -468,15 +468,15 @@ CMC/CG listing</p>
           <p>0xf46ccb9e08fb7e32eed560c87d5e583a59a43420</p>
         </div>
         <div class="footer-social">
-          <a href="#">
+          <!-- <a href="#">
             <img src="./assets/facebook.png" alt="">
-          </a>
+          </a> -->
           <a href="https://x.com/spacedogexyz">
             <img src="./assets/twitter.png" alt="">
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <img src="./assets/instagram.png" alt="">
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="footer-links">
@@ -491,8 +491,8 @@ CMC/CG listing</p>
           <p>Socials</p>
           <a href="https://t.me/spacedogexyz">Telegram</a>
           <a href="https://x.com/spacedogexyz">X</a>
-          <a href="#">UniSwap</a>
-          <a href="#">Etherscan</a>
+          <!-- <a href="#">UniSwap</a>
+          <a href="#">Etherscan</a> -->
           
       </article>
       
