--- a/index.html
+++ b/index.html
@@ -442,6 +442,20 @@ CMC/CG listing</p>
     </div>
   </div>
 </section>
+<!-- SPDG GameFi Teaser Placeholder -->
+<section class="section" id="gamefi" style=" color:#fff; text-align:center; padding:60px 20px;">
+  <h2 style="font-size:2.5em;">🚀 <span class="cust-h">SpaceDoge GameFi is Coming</span></h2>
+  <p class="gamefi-p" style="max-width:600px; margin:20px auto;">
+    Battle. Earn. Meme your way through space.  
+    <br><br>
+    The $SPDG GameFi experience will change the meme game forever.
+    <br><br>
+    🕹 Full reveal coming soon.
+  </p>
+  <div style="margin-top:40px;">
+    <img src="./assets/banner.jpg" alt="GameFi Teaser" style="border-radius:12px; max-width:100%; box-shadow:0 0 15px rgba(0,255,255,0.3);">
+  </div>
+</section>
 
 <!--  -->
  <section id="proofSect"  class="proof-sect section ct-sect">
@@ -461,21 +475,7 @@ CMC/CG listing</p>
   </div>
 
 </section>
-<!--  -->
-<!-- SPDG GameFi Teaser Placeholder -->
-<section class="section" id="gamefi" style=" color:#fff; text-align:center; padding:60px 20px; margin-bottom: 2rem;">
-  <h2 style="font-size:2.5em;">🚀 <span class="cust-h">SpaceDoge GameFi is Coming</span></h2>
-  <p class="gamefi-p" style="max-width:600px; margin:20px auto;">
-    Battle. Earn. Meme your way through space.  
-    <br><br>
-    The $SPDG GameFi experience will change the meme game forever.
-    <br><br>
-    🕹 Full reveal coming soon.
-  </p>
-  <!-- <div style="margin-top:40px;">
-    <img src="https://via.placeholder.com/600x340.png?text=GameFi+Teaser+Coming+Soon" alt="GameFi Teaser" style="border-radius:12px; max-width:100%; box-shadow:0 0 15px rgba(0,255,255,0.3);">
-  </div> -->
-</section>
+
 <!-- footer -->
  <footer class="footer-container">
   <div class="footer-r-obj">
